[package]
name = "solana_arb_simulator"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.100"
bytemuck = "1.24.0"
futures-util = "0.3.31"
safe-transmute = "0.11.3"
serde = "1.0.228"
serde_json = "1.0.140"
solana-program = "3.0.0"
solana-pubkey = "4.0.0"
solana-pubsub-client = "3.1.5"
solana-rpc-client = "3.1.6"
solana-rpc-client-types = "3.1.5"
spl-token = "9.0.0"
thiserror = "2.0.17"
tokio = "1.49.0"
toml = "0.9.11"
tracing = "0.1.44"
tracing-subscriber = { version = "0.3.22", features = ["env-filter"] }
uint = "0.10.0"
raydium-amm-v3 = { git = "https://github.com/raydium-io/raydium-amm-v3.git", features = [
    "client",
    "no-entrypoint",
] }
solana-sdk = "3.0.0"
anchor-lang = "0.32.1"
tokio-util = "0.7.18"
tokio-stream = "0.1.18"
futures = "0.3.31"
reqwest = { version = "0.13.1", default-features = false, features = ["json", "rustls", "http2"] }
dotenvy = "0.15.7"
rustls = { version = "0.23.36", features = ["ring"] }
spl-token-2022 = "10.0.0"
spl-memo = "6.0.0"
solana-compute-budget-interface = "3.0.0"
spl-associated-token-account = "8.0.0"
meteora = { path = "src/meteora" }
solana-address-lookup-table-interface = "3.0.1"
orca_whirlpools_client = "7.2.0"
orca_whirlpools_core = "2.1.0"
rusqlite = { version = "0.31", features = ["bundled"] }
