[package]
name = "meteora"
version = "0.3.2"
edition = "2021"
description = "Common libraries for DLMM"
authors = ["tian <tian@racoons.dev>"]

[features]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

anchor-lang = { version = "=0.31.1" }
anchor-spl = "0.31.0"
anchor-client = "0.31.0"

solana-client = ">=2.2.0, <3.0"
solana-program = ">=2.2.0, <3.0"
solana-sdk = "2.1.0"
spl-associated-token-account = "6.0.0"
spl-memo = "6.0.0"
spl-token = { version = ">=7.0, <8.0", features = ["no-entrypoint"] }
spl-transfer-hook-interface = "0.9.0"

bincode = "1.3.3"
bytemuck = "1.13.1"
num-integer = "0.1.45"
num-traits = "0.2.16"

tokio = "^1.0"
async-trait = "0.1.0"

anyhow = "1.0.71"

[dev-dependencies]
litesvm = "0.6.0"
serde_json = "1.0.140"
